fixed some layout issues, cleaned up some quiz html code, fixed some safari bugs, fixed plane causing scrollbar issue, looking into iframe animation issue FF3, made clouds more random looking (opening quiz goes crazy) (3hr)

--- a/static/stylesheets/publish.css
+++ b/static/stylesheets/publish.css
@@ -179,8 +179,8 @@ width:470px;
 .ovr_list {
 float:left;
 height:110px;
-margin-left:320px;
-margin-top:-35px;
+margin-left:210px;
+margin-top:-22px;
 width:120px;
 }
 
@@ -298,11 +298,16 @@ label {
     margin-bottom: 2px;
 }
 
+#sidebar ul li p {
+	display: inline;
+	margin: 0;
+	padding: 0;
+}
+
 
 #bookmark{
-margin-left:420px;
-margin-top:-152px;
-width:300px;
+	margin-left: 0;
+	width: 100px;
 }
 
 
